testsuite/vir/error/error/compile/07_typecheck.trieste
vbcc
typecheck
(top
  {}
  (func
    (functionid 5:@main)
    (params)
    (i32)
    (vars)
    (labels
      (label
        (labelid 5:^main)
        (body
          (const
            (localid 2:$a)
            (i32)
            (int 2:99))
          (error
            (errormsg 48:arrayref: source type 'i32' is not an array type)
            (arrayrefconst)))
        (ret
          (localid 2:$a))))))
